feat: AI chat base
